gitignore (preparing to merge into master?)
Signed-off-by: Ilia <i.ilmer@icloud.com>

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,9 @@
 visualizations/*
 IdentifiabilityODE.mpl
 .ipynb_checkpoints
+*.json
+helens-models
+gravity.mpl
+julia-examples.mpl
+*.mw
+simple.mpl
